apps/jenkins-server-v1/jenkins-server-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-server
spec:
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          serviceName: jenkins-operator-http-prod-jenkins
          servicePort: 8080
